--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:background="@android:color/holo_orange_light"
         android:gravity="center_horizontal|center_vertical"
         android:textSize="40sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/prob"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +47,7 @@
         android:layout_marginTop="36dp"
         android:gravity="center_horizontal|center_vertical"
         android:textSize="35sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/timer"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,7 +63,7 @@
         android:background="@android:color/holo_blue_bright"
         android:gravity="center_horizontal|center_vertical"
         android:textSize="40sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/prob"
         app:layout_constraintTop_toTopOf="parent" />
@@ -75,7 +75,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="DONE!"
         android:textSize="36sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -91,7 +91,7 @@
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
         android:layout_marginBottom="1dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:columnCount="2"
         app:layout_constraintBottom_toTopOf="@+id/go"
         app:layout_constraintEnd_toEndOf="parent"
@@ -159,7 +159,7 @@
         android:onClick="goF"
         android:text="PLAY AGAIN!"
         android:textSize="18sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -172,7 +172,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
